    install (FILES hi16-app-kmidimon.png
             DESTINATION share/icons/hicolor/16x16/apps
             RENAME kmidimon.png)

    install (FILES hi32-app-kmidimon.png
             DESTINATION share/icons/hicolor/32x32/apps
             RENAME kmidimon.png)

    install (FILES hi48-app-kmidimon.png
             DESTINATION share/icons/hicolor/48x48/apps
             RENAME kmidimon.png)

    install (FILES hi64-app-kmidimon.png
             DESTINATION share/icons/hicolor/64x64/apps
             RENAME kmidimon.png)

    install (FILES hi128-app-kmidimon.png
             DESTINATION share/icons/hicolor/128x128/apps
             RENAME kmidimon.png)

    install (FILES hisc-app-kmidimon.svgz
             DESTINATION share/icons/hicolor/scalable/apps
             RENAME kmidimon.svgz)

